--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -3,12 +3,44 @@
 {% block title %}{{ titreSite }}{% endblock %}
 
 {% block body %}
-
-{#    Logo Initial    #}
-    <div class="loader2">
-        <span id="span1"><img id="img" src="{{ asset('images/logo_loader.png') }}" alt="Logo DLF" class="d-none position-absolute top-50 start-50 translate-middle"></span>
-    </div>
-
-{#  Logo N°2 après chargement   #}
-    <a href="{{ path('accueil') }}"><img id="image2" src="{{ asset('images/logo_loader_2.png') }}" alt="Logo DLF" class="btn position-absolute top-50 start-50 translate-middle"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('accueil') }}">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Ouvrir le menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navBar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('accueil') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link disabled" href="#">Règlement</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">A propos de nous</a>
+                    </li>
+                    {% if is_granted('ROLE_CIVIL') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_logout') }}">Se Déconnecter</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nos Entreprises</a>
+                        </li>
+                    {% elseif is_granted('ROLE_GENDARME') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('gendarmeAccueil') }}">Intranet Gendarmerie</a>
+                        </li>
+                    {% elseif is_granted('ROLE_POMPIER') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Intranet Pompier</a>
+                        </li>
+                    {% else %}
+                        <a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
+                        <a class="nav-link" href="{{ path('app_login') }}">Se Connecter</a>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
 {% endblock %}
