--- a/templates/accueil2/footer.html.twig
+++ b/templates/accueil2/footer.html.twig
@@ -2,7 +2,7 @@
     <section class="container text-center text-secondary">
         <div class="row">
             <div class="col-md-12">
-                @2020 - tous droits réservés - Dessanco Life France - DLF - Fièrement développé par Jacques Blake avec beaucoup de <img src="{{ asset('images/icecream_122439.png') }}" alt="glace">
+                @2020 - Tous droits réservés - Hardesia RP - Fièrement développé par Jacques Blake avec beaucoup de <img src="{{ asset('images/icecream_122439.png') }}" alt="glace">
             </div>
         </div>
     </section>
