--- a/templates/accueil2/header.html.twig
+++ b/templates/accueil2/header.html.twig
@@ -12,9 +12,23 @@
                 <li class="nav-item active">
                     <a class="nav-link disabled" href="#">Règlement</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">A propos de nous</a>
+                </li>
                 {% if is_granted('ROLE_CIVIL') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_logout') }}">Se Déconnecter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nos Entreprises</a>
+                    </li>
+                {% elseif is_granted('ROLE_GENDARME') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('gendarmeAccueil') }}">Intranet Gendarmerie</a>
+                    </li>
+                {% elseif is_granted('ROLE_POMPIER') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Intranet Pompier</a>
                     </li>
                 {% else %}
                     <a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
